@@ -86,6 +86,8 @@ struct WebLocalizedString {
         SubmitButtonDefaultLabel,
         ThisMonthButtonLabel,
         ThisWeekButtonLabel,
+        ValidationBadInputForNumber,
+        ValidationBadInputForDateTime,
         ValidationPatternMismatch,
         ValidationRangeOverflow,
         ValidationRangeUnderflow,
